cmake_minimum_required(VERSION 3.27)
project(CDataFrame C)

set(CMAKE_C_STANDARD 11)

add_executable(CDataFrame
        main.c
        column.c
        column.h
        cdataframe.h
        cdataframe.h
        list.h
        cdataframe.c
        list.c
        matrix.h
        matrix.c
        sort.h
        sort.h
        sort.h
        sort.h
        sort.h
        sort.h
        sort.c
        sort.c
        sort.c)
